# simple_orm

./: README.md  pyproject.toml
.github/workflows/: autotest.yml
simple_orm/: bases.py  db.py  models.py  utils.py
tests/: test_query_builder.py  test_query_builder_model.py  test_simple_orm.py  test_utils.py
volumes/: default.sqlite3
