[tool.poetry]
name = "simple_orm"
version = "0.1.0"
description = ""
authors = ["Yury Stolpov <yurass130@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
